Fix z-index problem with hovered red expense bar

--- a/app/javascript/spreadsheet/styles/income.sass
+++ b/app/javascript/spreadsheet/styles/income.sass
@@ -58,7 +58,7 @@
         box-shadow: 2px 2px 3px gray
         border-radius: 3px
         display: none
-        z-index: 1
+        z-index: 5
         p
           margin: 0px
           padding: 0px
